python/testData/quickFixes/PyAddImportQuickFixTest/qualifyWithRegularImport/main.py
<warning descr="Unused import statement 'import pkg.src'">import pkg.src</warning>

<error descr="Unresolved reference 'MyClass'">My<caret>Class</error>
